[build-system]
build-backend = "setuptools.build_meta"
requires = [
	"setuptools>=61.0",
	"wheel",
]

[project]
authors = [
	{ name = "Matt Wilson", email = "matthew@synesis.com.au" },
]
dependencies = []
description = "Tokio-like functionality for Python"
license-files = ["LICENSE"]
name = "asynkio"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.2"

[project.urls]
Changelog = "https://github.com/synesissoftware/asynkio/releases"
Homepage = "https://github.com/synesissoftware/asynkio"
Issues = "https://github.com/synesissoftware/asynkio/issues"

[project.optional-dependencies]
dev = [
	"aiofiles",
	"diagnosticism",
	"pyclasp>=0.8.10",
	"pytest>=8.4.1",
]
test = [
	"aiofiles",
	"diagnosticism",
	"pyclasp>=0.8.10",
	"pytest>=8.4.1",
]

[dependency-groups]
dev = [
	"aiofiles",
	"diagnosticism",
	"pyclasp>=0.8.10",
	"pytest>=8.4.1",
]

[tool.setuptools.packages.find]
exclude = [
	"examples",
	"tests",
]
