[build-system]
build-backend = "setuptools.build_meta"
requires = [
	"setuptools>=61.0",
	"wheel",
]

[project]
authors = [
	{ name = "Matt Wilson", email = "matthew@synesis.com.au" },
]
classifiers = [
	"Intended Audience :: Developers",
	"License :: OSI Approved :: BSD License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
]
dependencies = [
	"diagnosticism>=0.17.0",
]
description = "Tokio-like functionality for Python"
license-files = ["LICENSE"]
name = "asynkio"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.urls]
Changelog = "https://github.com/synesissoftware/asynkio/releases"
Homepage = "https://github.com/synesissoftware/asynkio"
Issues = "https://github.com/synesissoftware/asynkio/issues"

[project.optional-dependencies]
dev = [
	"aiofiles",
	"black>=24.1",
	"diagnosticism >=0.17, <1",
	"pyclasp>=0.8.10",
	"pytest>=8.4.1",
]
test = [
	"aiofiles",
	"black>=24.1",
	"diagnosticism >=0.17, <1",
	"pyclasp>=0.8.10",
	"pytest>=8.4.1",
]

[dependency-groups]
dev = [
	"aiofiles",
	"black>=24.1",
	"diagnosticism >=0.17, <1",
	"pyclasp>=0.8.10",
	"pytest>=8.4.1",
	"ruff>=0.4.0",
]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py311", "py312", "py313", "py314"]

[tool.flake8]
max-line-length = 120
max-doc-length = 76

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 76

[tool.setuptools.packages.find]
exclude = [
	"examples",
	"tests",
]

